--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "save-dev": "0.0.1-security"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server" : "nodemon ./server.js --exec babel-node -e js"
+    "server": "nodemon ./server.js --exec babel-node -e js"
   },
   "eslintConfig": {
     "extends": "react-app"
