--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mongoose": "^5.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
