--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server.js --exec babel-node -e js"
+    "server": "nodemon ./server.js --exec babel-node -e js",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
