--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "save-dev": "0.0.1-security",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
