--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server.js --exec babel-node -e js",
-    "heroku-postbuild": "npm run build"
+    "server": "nodemon ./server.js --exec babel-node -e js"
   },
   "eslintConfig": {
     "extends": "react-app"
