--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon ./server.js --exec babel-node -e js"
+    "server": "nodemon ./server.js --exec babel-node -e js",
+    "prod-start": "babel-node server.js",
+    "heroku-postbuild": "npm i"
   },
   "eslintConfig": {
     "extends": "react-app"
