--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-preset-stage-0": "^6.24.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "babel-node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
