fixed spelling error

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eject": "react-scripts eject",
     "server": "nodemon ./server.js --exec babel-node -e js",
     "prod-start": "babel-node server.js",
-    "heroku-postbuild": "npm run bulid && npm i"
+    "heroku-postbuild": "npm run build && npm i"
   },
   "eslintConfig": {
     "extends": "react-app"
