--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "babel-preset-stage-0": "^6.24.1"
   },
   "scripts": {
+    "react-start": "PORT=3000 react-scripts start",
     "start": "babel-node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon ./server.js --exec babel-node -e js",
-    "prod-start": "babel-node server.js",
     "heroku-postbuild": "npm run build && npm i"
   },
   "eslintConfig": {
